# aigov-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_FLOW.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  OPEN_SOURCE_SCOPE.md  README.md  SECURITY.md  action.yml  docker-compose.yml  mcp.json  package-lock.json  package.json
.cursor-plugin/: README.md  installation-model.json  marketplace.md  plugin.json  quickstart.md  use-cases.md
.github/: CODEOWNERS  SUPPORT.md  dependabot.yml  pull_request_template.md
.oss-ci-out/: partner-certification-package.md  policy-pack-marketplace-manifest-validation.json  regulatory-evidence-export.md  repo-health.json  revenue-roi.json
.vscde/: settings.json
ai_discovery/: cli.ts  confirmedStore.ts  discoveryResult.ts  filesystemCollect.ts  index.ts  runDiscovery.ts  scanner.ts  tsconfig.json  types.ts
aigov_py/: __init__.py
api/: govai-http-v1.openapi.yaml
autonomous/: approval-boundaries.json  autonomous-governance-manifest.json  autonomous-governance-schema.json  autonomy-limits.json  delegation-boundaries.json  intervention-points.json  role-models.json
benchmarks/: README.md
conformity/: ai-act-control-mapping.json  conformity-assessment-workflow.json  incident-reporting-workflow.json  post-market-monitoring-workflow.json  regulatory-workflow-manifest.json  risk-management-workflow.json  technical-documentation-workflow.json
contracts/: README.md  govai.immutable_anchor.v1.schema.json  govai.policy.v1.schema.json  govai.signature_report.v1.schema.json
docs/: THESIS_REFERENCE_SCOPE.md  api-reference.md  audit-export-verifier-fixture-contract.md  backup-and-recovery.md  billing.md  branching-strategy.md  cli-reference.md  common-errors.md  (+46 more)
python/: README.md  pyproject.toml
python/aigov_py/: __init__.py  agent_action_signatures.py  ai_discovery_completed.py  approve.py  assert_ci_evidence_bundle.py  audit_close.py  audit_export_bundle.py  audit_export_manifest.py  audit_export_signing.py  audit_exports.py  audit_object.py  autonomous_action_governance.py  canonical_json.py  ci_fallback.py  cli.py  cli_config.py  cli_exit.py  client.py  datasets.py  demo.py  demo_e2e.py  demo_golden_path.py  discovery_policy_mapping.py  discovery_scan.py  embed_app.py  emit_event.py  emit_evidence.py  env_resolution.py  epistemic_readiness.py  evaluate.py  events.py  evidence_artifact_gate.py  evidence_pack.py  export_bundle.py  fetch_bundle_from_govai.py  govai_postgres_runs.py  governance_catalog.py  ingest_run.py  lineage_graph.py  multi_agent_trace.py  (+25 more)
python/aigov_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/aigov_py/experiments/: __init__.py  aggregate.py  artifact_bound_enforcement.py  artifact_bundle_replay.py  artifact_bundle_replay_rubric.json  controlled_failure_injection.py  gate_model.py  real_world_ci_injection.py  real_world_ci_runner.py  scenario_fields.py  scenario_rubric.json
python/aigov_py/experiments/datasets/: repos.json
python/aigov_py/experiments/scripts/: __init__.py  emit_scenario.py  native_baseline.py
python/aigov_py/runtime/: __init__.py  client.py  exceptions.py  models.py
python/aigov_py/runtime/adapters/: __init__.py  fastapi.py  langchain.py  openai_gateway.py
python/aigov_py/standards/: __init__.py  capability_policy.py  cli.py  common.py  decision_trace.py  delegation_graph.py  evaluation.py  evidence_pack.py  policy_module.py  registry.py  trace_verification.py  validator.py
python/artifacts/: model_local-govai-check-test-2.joblib
python/govai/: __init__.py  api.py  bundle.py  client.py  compliance.py  evidence.py  export.py  usage.py  verify.py
python/tests/: conftest.py  test_agent_action_signatures.py  test_agent_governance_check.py  test_agent_governance_score.py  test_ai_discovery_completed.py  test_artifact_bundle_replay.py  test_assert_ci_evidence_bundle.py  test_audit_export_foundation.py  test_audit_export_manifest.py  test_audit_export_signing.py  test_autonomous_action_governance.py  test_autonomous_governance_check.py  test_benchmark_scripts.py  test_cli_config_env_aliases.py  test_cli_terminal_sdk.py  test_commercial_readiness_check.py  test_compliance_workflow_contract.py  test_conformity_workflow_check.py  test_contract_schemas_present.py  test_control_plane_check.py  test_cursor_marketplace_publication.py  test_customer_analytics_check.py  test_customer_health_score.py  test_customer_operations_check.py  test_dataset_governance.py  test_demo_deterministic.py  test_demo_golden_path.py  test_dependabot_config.py  test_developer_integrations_check.py  test_discovery_policy_mapping.py  test_discovery_scan_v2.py  test_docs_self_serve_onboarding_flow.py  test_empirical_evaluation_check.py  test_env_resolution.py  test_epistemic_readiness_cli.py  test_evidence_artifact_gate.py  test_evidence_pack_init_cli.py  test_evidence_quality_check.py  test_evidence_quality_score.py  test_experiments.py  (+125 more)
python/tests/fixtures/: portable_digest_fixture.json  release-manifest-broken-ref.json
rust/: Cargo.toml  Dockerfile  policy.dev.json  policy.json
rust/adapters/immutable_s3/: Cargo.toml
rust/adapters/immutable_s3/src/: lib.rs
rust/migrations/: 0001_core_api_key_usage.sql  0002_core_issued_api_keys.sql
rust/src/: ai_decision_audit.rs  ai_decision_http.rs  ai_decision_integrity.rs  aigov_env.rs  api_error.rs  api_usage.rs  audit_api_key.rs  audit_export.rs  audit_export_bundle.rs  audit_export_signing.rs  audit_export_verification.rs  audit_store.rs  auth.rs  autonomous_runtime.rs  billing_trace.rs  bundle.rs  canonical_json.rs  compliance_summary.rs  contracts.rs  db.rs  epistemic_readiness.rs  evidence_usage.rs  govai_api.rs  govai_environment.rs  govai_functions_v2.rs  governance_graph.rs  hosted_provisioning.rs  http_observability.rs  immutable_store.rs  ledger_storage.rs  ledger_view.rs  lib.rs  lineage_projection.rs  lineage_validation.rs  main.rs  metering.rs  onboarding.rs  onboarding_http.rs  ops_log.rs  policy.rs  (+25 more)
rust/tests/: runtime_core_integration.rs
(+1390 files in other folders)
