[package]
name = "aigov_audit"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Ledger-authoritative AI governance audit runtime for AIGov Core"
repository = "https://github.com/MonikaDvorackova/aigov-core"
readme = "../README.md"
keywords = ["governance", "audit", "compliance", "ai", "ledger"]
categories = ["web-programming", "database"]

[features]
# Default public core build excludes hosted SaaS, billing, Stripe, onboarding, and tenant console.
default = []
hosted-platform = []

[[bin]]
name = "aigov_audit"
path = "src/main.rs"

[[bin]]
name = "portable_evidence_digest_once"
path = "src/bin/portable_evidence_digest_once.rs"

[[bin]]
name = "replay_audit_export_once"
path = "src/bin/replay_audit_export_once.rs"

[[bin]]
name = "epistemic_readiness_once"
path = "src/bin/epistemic_readiness_once.rs"

[[bin]]
name = "lineage_graph_once"
path = "src/bin/lineage_graph_once.rs"

[[bin]]
name = "verify_audit_export_bundle_once"
path = "src/bin/verify_audit_export_bundle_once.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "10.4.0"
once_cell = "1"

sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "tls-rustls"] }
sqlx-core = { version = "0.8.6", default-features = false, features = ["migrate", "_rt-tokio", "chrono", "uuid"] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["migrate", "chrono", "uuid"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.13.0"
subtle = "2.6"
base64 = "0.22"
urlencoding = "2.1"
ed25519-dalek = { version = "3", features = ["pkcs8"] }
governor = "0.10.4"
rand = "0.10.1"
zip = "8.6"

[dev-dependencies]
hmac = "0.13.0"
sha2 = "0.10"
hex = "0.4"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
base64 = "0.22"
rand = "0.10.1"
